updated docker folder

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,5 @@
-build:
-  docker:
-    web: Dockerfile
-run:
-  web: bundle exec puma -C config/puma.rb
+version: '3'
+services:
+  sut:
+    image: matpower/matpower-desktop:${CACHE_TAG}
+    command: matpower_docker_tests.sh
